workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/ComunicacaoProduto__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os tipos de comunicação dos produtos</description>
    <label>Comunicação do produto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comunicações do produto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>