workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/fields/CanalDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CanalDistribuicao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canal de distribuição</label>
    <referenceTo>CanalDistribuicao__c</referenceTo>
    <relationshipLabel>Comunicações do produto</relationshipLabel>
    <relationshipName>ComunicacoesProduto</relationshipName>
    <type>Lookup</type>
</CustomField>