workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/fields/InicioEnvio__c.field-meta.xml
<CustomField>
    <fullName>InicioEnvio__c</fullName>
    <label>Início de envio</label>
    <type>Date</type>
</CustomField>