workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/fields/MeioEnvio__c.field-meta.xml
<CustomField>
    <fullName>MeioEnvio__c</fullName>
    <label>Meio de envio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>