workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/fields/NomeAviso__c.field-meta.xml
<CustomField>
    <fullName>NomeAviso__c</fullName>
    <label>Nome do aviso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>