workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Produto comercial</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Comunicações do produto</relationshipLabel>
    <relationshipName>ComunicacoesProduto</relationshipName>
    <type>Lookup</type>
</CustomField>