workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/fields/QuantidadeAvisos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAvisos__c</fullName>
    <label>Quantidade de avisos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>