workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/fields/TerminoEnvio__c.field-meta.xml
<CustomField>
    <fullName>TerminoEnvio__c</fullName>
    <label>Término de envio</label>
    <type>Date</type>
</CustomField>