workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Externo</fullName>
            </value>
            <value>
                <fullName>Interno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>