workspace-sf/force-app/main/default/objects/ComunicacaoProduto__c/validationRules/ValidarObrigatoriedadeProdutoCanalPapel.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarObrigatoriedadeProdutoCanalPapel</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Produto__c),
    ISBLANK(CanalDistribuicao__c),
    ISBLANK(Papel__c)
)</errorConditionFormula>
    <errorMessage>Preencha um dos campos Produto comercial, Canal ou Papel</errorMessage>
</ValidationRule>